test/trivial/bradc/uintloop.good
Error: Invalid arithmetic sequence, bounds and stride must be integers (uintloop.chpl:3)
