test/trivial/bradc/uintloop.chpl
config const n: uint = 10;

for i in 1..n do {
  writeln(i);
}
